--- a/demo.css
+++ b/demo.css
@@ -1,15 +1,20 @@
 * {
-    box-sizing: border-box;
-    scroll-behavior: smooth;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
-    margin: 0;
-    text-align: center;
-    font-family: sans-serif;
-  }
-  canvas {
-    border: 2px solid lightgrey;
-    border-radius: 25px;
-    position: relative;
-  }
+  margin: 20px;
+  text-align: center;
+  font-family: sans-serif;
+}
+
+canvas {
+  border: 2px solid lightgrey;
+  border-radius: 25px;
+  position: relative;
+}
+
+ul {
+  text-align: left;
+}
